# nbsapi

./: .env  .gitignore  CONFORMANCE_TEST_DATA.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: tests.yml
comparison/: analysis.md  deltares_api_usage.md  differences.md  nbsapi.json  nbsapi_v2.json
docs/: api_v2_documentation.md  migration_guide_v1_to_v2.md
html/: index.html
html/static/: styles.css
src/alembic/: env.py
src/alembic/versions/: 1575eedda88f_add_specialized_impacts.py  196c07f66489_.py  28b692db0508_one_to_many_solution_impacts.py  3adb8ef43629_initial_revision.py  53401ffc047b_description_now_part_of_unit.py  59748ffffc95_add_physical_properties.py  5df56a7878af_add_apiversion_table.py  858ab3cfa441_.py  97f61574300b_move_adaptation_value_to_association_.py  a85c82055f0b_add_styling_to_nbs.py  add_deltares_compatibility.py  bc341db95b36_.py  ea7ce84afd65_add_project_model.py
src/nbsapi/: cli.py  config.py  database.py  main.py
src/nbsapi/api/: docs.py
src/nbsapi/api/dependencies/: auth.py  user.py  versioning.py
src/nbsapi/api/routers/: adaptationtargets.py
src/nbsapi/api/v2/: __init__.py
src/nbsapi/crud/: adaptationtarget.py  apiversion.py  enhanced_impact.py  impact.py  measure_type.py  naturebasedsolution.py  project.py  specialized_impact.py  user.py
src/nbsapi/models/: __init__.py  adaptation_target.py  apiversion.py  impact.py  impact_intensity.py  impact_unit.py  measure_type.py  naturebasedsolution.py  project.py  specialized_impact.py  user.py
src/nbsapi/schemas/: adaptationtarget.py  apiversion.py  contact.py  deltares.py  geometry.py  impact.py  measure_type.py  naturebasedsolution.py  physical_properties.py  project.py  specialized_impacts.py  styling.py  user.py
src/nbsapi/solutions/: candidate_solutions.yaml  supported_solutions.yaml
src/nbsapi/utils/: auth.py  deltares_converter.py  geometry.py
test_generator/: test_generator.py
tests/: test_api.py  test_api_v2.py  test_create_solution_impact_endpoint.py  test_deltares_compatibility.py  test_enhanced_impact_validation.py  test_enhanced_schemas.py  test_geometry_attribute_access.py  test_measure_types.py  test_model_relationships.py  test_nbs_create_without_adaptations.py  test_schemas_v2.py  test_solution_request_v2.py
tests/fixtures/: deltares.json
(+9 files in other folders)
